--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,6 +25,8 @@
 @import "components/feature";
 @import "components/filter";
 @import "components/tooltip";
+@import "components/rating";
+@import "components/fileuploader";
 
 @import "layout/header";
 @import "layout/main-features";
