feature: adds mobile version for popup

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -94,7 +94,7 @@
           </a>
         </li>
       </ul>
-      <span class="btn" data-uk-toggle="target: #popupCredit">Задать вопрос онлайн</span>
+      <span class="btn" data-uk-toggle="target: #popupErrorPay">Задать вопрос онлайн</span>
     </div>
   </div>
 </footer>
@@ -228,7 +228,7 @@
         </div>
       </div>
       <div class="field field--account uk-margin-bottom">
-        <label for="" class="field__title">Телефон</label>
+        <label for="" class="field__title popup__subtitle">Контактный телефон</label>
         <input type="text">
       </div>
       <button class="btn uk-margin-bottom" type="button">Отправить заявку</button>
@@ -239,6 +239,10 @@
           <span>+7&nbsp;(812)&nbsp;509-24-80</span>
         </a>
         <span class="popup__contact-text">С 10:00 до 21:00, без выходных, <br>бесплатно по РФ</span>
+      </div>
+      <div class="popup__footer uk-hidden@l">
+        <input class="uk-hidden" type="checkbox" id="f9" name="f9" checked="">
+        <label for="f4">Согласен с условиями <a href="#">Публичной оферты</a></label>
       </div>
     </div>
   </div>
@@ -288,7 +292,11 @@
         </li>
       </ul>
       <button class="btn" type="button">Внести предоплату</button>
-      <button class="btn btn--gray" type="button">Я оплачу всю сумму при получении без скидки</button>
+      <button class="btn btn--gray" type="button">Я оплачу всю сумму <br>при получении без скидки</button>
+      <div class="popup__footer uk-hidden@l">
+        <input class="uk-hidden" type="checkbox" id="f4" name="f4" checked="">
+        <label for="f4">Согласен с условиями <a href="#">Публичной оферты</a></label>
+      </div>
     </div>
   </div>
 </div>
@@ -513,9 +521,9 @@
             </div>
           </li>
         </ul>
-        <div class="popup__footer">
-          <input class="uk-hidden" type="checkbox" id="f4" name="f4" checked="">
-          <label for="f4">Согласен с условиями <a href="#">Публичной оферты</a></label>
+        <div class="popup__footer uk-visible@l">
+          <input class="uk-hidden" type="checkbox" id="f5" name="f5" checked="">
+          <label for="f5">Согласен с условиями <a href="#">Публичной оферты</a></label>
         </div>
       </div>
       <div class="popup__container">
@@ -541,6 +549,10 @@
           </div>
         </div>
       </div>
+      <div class="popup__footer uk-hidden@l">
+        <input class="uk-hidden" type="checkbox" id="f6" name="f6" checked="">
+        <label for="f6">Согласен с условиями <a href="#">Публичной оферты</a></label>
+      </div>
     </div>
   </div>
 </div>
@@ -564,12 +576,12 @@
     </div>
     <div class="popup__footer">
       <div class="uk-margin-small-bottom">
-        <input class="uk-hidden" type="checkbox" id="f5" name="f5" checked="">
-        <label for="f5">Согласен с условиями <a href="#">Публичной оферты</a></label>
+        <input class="uk-hidden" type="checkbox" id="f7" name="f7" checked="">
+        <label for="f7">Согласен с условиями <a href="#">Публичной оферты</a></label>
       </div>
       <div>
-        <input class="uk-hidden" type="checkbox" id="f6" name="f6">
-        <label for="f6">Получать эксклюзивные скидки в SMS‑рассылке</label>
+        <input class="uk-hidden" type="checkbox" id="f8" name="f8">
+        <label for="f8">Получать эксклюзивные скидки в SMS‑рассылке</label>
       </div>
     </div>
   </div>
@@ -603,8 +615,8 @@
       <button class="btn btn--light" type="button">Получить повторно</button>
     </div>
     <div class="popup__footer">
-      <input class="uk-hidden" type="checkbox" id="f5" name="f5" checked="">
-      <label for="f5">Согласен с условиями <a href="#">Публичной оферты</a></label>
+      <input class="uk-hidden" type="checkbox" id="f10" name="f10" checked="">
+      <label for="f10">Согласен с условиями <a href="#">Публичной оферты</a></label>
     </div>
   </div>
 </div>
@@ -642,8 +654,8 @@
       <a href="#">Есть вопросы?</a>
     </div>
     <div class="popup__footer">
-      <input class="uk-hidden" type="checkbox" id="f5" name="f5" checked="">
-      <label for="f5">Согласен с условиями <a href="#">Публичной оферты</a></label>
+      <input class="uk-hidden" type="checkbox" id="f11" name="f11" checked="">
+      <label for="f11">Согласен с условиями <a href="#">Публичной оферты</a></label>
     </div>
   </div>
 </div>
@@ -681,8 +693,8 @@
       <a href="#">Есть вопросы?</a>
     </div>
     <div class="popup__footer">
-      <input class="uk-hidden" type="checkbox" id="f5" name="f5" checked="">
-      <label for="f5">Согласен с условиями <a href="#">Публичной оферты</a></label>
+      <input class="uk-hidden" type="checkbox" id="f12" name="f12" checked="">
+      <label for="f12">Согласен с условиями <a href="#">Публичной оферты</a></label>
     </div>
   </div>
 </div>
