--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -190,22 +190,171 @@
     }
   }
 
-  &__btn-catalog {
-    padding: 10px 15px 9px;
-    max-width: 230px;
-    box-shadow: 0px 4px 12px rgba(255, 84, 140, 0.4);
-    border-radius: 8px;
-    background-color: #FF548C;
-    font: 600 15px/19px FuturaPT;
-    color: #ffffff;
-    text-transform: uppercase;
+  &__catalog {
+    position: relative;
 
-    @include screen(l) {
-      margin-right: 10px;
+    &-bg {
+      position: relative;
+
+      &::before {
+        content: "";
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, .7);
+        z-index: 49;
+        transition: opacity .15;
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      &--dark {
+        &::before {
+          opacity: 1;
+          pointer-events: inherit;
+        }
+      }
     }
 
-    svg {
-      margin: 0 15px 2px 0;
+    &-btn {
+      position: relative;
+      z-index: 51;
+      padding: 13px 15px 9px;
+      max-width: 230px;
+      box-shadow: 0px 4px 12px rgba(255, 84, 140, 0.4);
+      border-radius: 8px;
+      background-color: #FF548C;
+      font: 600 15px/19px FuturaPT;
+      color: #ffffff;
+      text-transform: uppercase;
+
+      @include screen(l) {
+        margin-right: 10px;
+      }
+
+      svg {
+        margin: 0 15px 2px 0;
+      }
+
+      &.uk-open+div+.header__catalog-bg::before {
+        opacity: 1;
+      }
+    }
+
+    &-container {
+      position: absolute;
+      top: -20px !important;
+      left: -15px !important;
+      padding: 90px 0 0;
+      width: 1250px;
+      border-radius: 20px;
+      z-index: 50;
+      background: #F8F8F8;
+      overflow: hidden;
+    }
+
+    &-close {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      padding: 12px 15px 11px;
+      width: 100%;
+      max-width: 110px;
+      font: 600 15px/18px FuturaPT;
+      color: #6B6B6B;
+      text-transform: uppercase;
+      background: #DDDDDD;
+      border-radius: 8px;
+    }
+
+    &-tabs {
+      padding-left: 20px;
+      margin: 0;
+      border-bottom: 1px solid rgba(216, 216, 216, .5);
+
+      li {
+        &:not(:last-of-type) {
+          @include screen(l) {
+            margin-right: 30px;
+          }
+        }
+      }
+
+      &.uk-subnav-pill>.uk-active>a {
+        background-color: transparent !important;
+        color: #FF548C;
+
+        &::after {
+          width: 100%;
+          background: #FF548C;
+        }
+      }
+
+      &.uk-subnav-pill>*> :first-child {
+        position: relative;
+        padding: 5px 10px 15px;
+        background: transparent;
+        color: #333333;
+        font: 600 20px/28px FuturaPT;
+        text-transform: inherit;
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          margin: auto;
+          height: 6px;
+          width: 40%;
+          background: transparent;
+          border-radius: 100px 100px 0px 0px;
+          transition: width .3s;
+        }
+      }
+    }
+
+    &-content {
+      padding: 15px 15px 20px;
+      background: #FFFFFF;
+    }
+
+    &-list {
+      a {
+        padding: 10px 25px;
+        text-align: center;
+        border-radius: 20px;
+        transition: box-shadow .15s;
+
+        &:hover {
+          box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+
+          span {
+            color: #FF548C;
+          }
+        }
+      }
+
+      img {
+        margin: auto;
+        width: 100%;
+        height: 100%;
+        mix-blend-mode: multiply;
+      }
+
+      div {
+        margin-bottom: 10px;
+        width: 140px;
+        height: 140px;
+      }
+
+      span {
+        font: 500 18px/28px FuturaPT;
+        color: #30373D;
+        transition: color .15s;
+      }
     }
   }
 
@@ -214,32 +363,81 @@
       margin-top: 25px;
     }
 
-    nav {
-      a {
-        padding: 0 35px;
-        white-space: nowrap;
-        font: 500 18px/23px FuturaPT;
-        color: #30373D;
-      }
-
-      img {
-        margin-right: 10px;
-      }
-
-      li:not(:last-of-type) {
+    .header__list {
+      &>li {
         position: relative;
 
-        &::after {
-          position: absolute;
+        &:not(:last-of-type) {
+          &::after {
+            position: absolute;
+            content: "";
+            top: 0;
+            bottom: 0;
+            right: 0;
+            margin: auto;
+            width: 1px;
+            height: 50px;
+            background-color: rgba(0, 0, 0, .1);
+          }
+        }
+
+        &::before {
           content: "";
-          top: 0;
-          bottom: 0;
+          position: absolute;
+          bottom: -10px;
+          left: 0;
           right: 0;
           margin: auto;
-          width: 1px;
-          height: 50px;
-          background-color: rgba(0, 0, 0, .1);
+          width: 70%;
+          height: 6px;
+          border-radius: 100px 100px 0px 0px;
+          background: transparent;
+          transition: width .2s, background-color .2s;
+          will-change: width, background-color;
         }
+
+        &:hover {
+          &::before {
+            background: #FF548C;
+            width: 100%;
+          }
+
+          &>a {
+            color: #FF548C;
+          }
+        }
+
+        &>a {
+          padding: 0 35px;
+          white-space: nowrap;
+          font: 500 18px/23px FuturaPT;
+          color: #30373D;
+          transition: color .15s;
+        }
+
+        img {
+          margin-right: 10px;
+        }
+      }
+    }
+  }
+
+  &__sublist {
+    position: absolute;
+    min-width: 0;
+    width: 100%;
+    padding: 0;
+    top: 48px !important;
+    border-radius: 0 0 20px 20px;
+
+    a {
+      display: block;
+      padding: 10px 15px !important;
+      font: 500 16px/23px FuturaPT;
+      color: #30373D;
+
+      &:hover {
+        color: #FF548C;
       }
     }
   }
@@ -247,7 +445,7 @@
   &__banner {
     position: relative;
     padding: 15px 30px 15px 105px;
-    width: 310px;
+    width: 260px;
     text-align: right;
     background-color: #F4F4F4;
     border-radius: 8px;
@@ -266,17 +464,17 @@
 
       &:first-of-type {
         margin-bottom: 5px;
+        white-space: nowrap;
         font: 500 11px/13px Roboto;
         text-transform: uppercase;
         color: #FF548C;
       }
 
       &:last-of-type {
-        font: 700 20px/23px Roboto;
+        white-space: nowrap;
+        font: 700 17px/23px Roboto;
         color: #30373D;
       }
     }
   }
-
-
 }
