feature: changes builds

--- a/src/components/head.html
+++ b/src/components/head.html
@@ -7,4 +7,5 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Document</title>
   <link rel="stylesheet" href="styles/main.min.css" />
+  <script defer src="js/jquery.min.js"></script>
 </head>
