--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -752,7 +752,8 @@
   </div>
 </div>
 
-<script src="js/scripts.min.js"></script>
+<script defer src="js/library.min.js"></script>
+<script defer src="js/scripts.min.js"></script>
 
 <button type="button" class="hamburger"
   style="position: fixed; bottom: 20px; left: 20px; margin-right: 20px; padding: 0; z-index: 99999; display: inline-block; width: 50px;"
