--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -44,7 +44,8 @@
         padding: 20px 5px 15px;
         width: 100%;
         overflow-x: scroll;
-        background: #f2f2f2;
+        background: #f7f7f7;
+        border-bottom: 1px solid rgba(234, 234, 234, .8);
       }
 
       div:first-of-type {
@@ -567,6 +568,313 @@
       align-self: flex-start;
       margin-left: 40px;
       max-width: 244px;
+    }
+  }
+
+  &__faq {
+    @include screen(xl) {
+      padding-bottom: 25px;
+    }
+
+    .frame {
+      background: #FFFFFF;
+      box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+
+      @include screen(l) {
+        padding: 30px 25px 40px 0;
+      }
+    }
+
+    &-title {
+      font: 600 32px/42px FuturaPT;
+      color: #333333;
+
+      @include screen(l) {
+        padding-left: 40px;
+        margin-bottom: 35px;
+      }
+    }
+
+    .accordion {
+      box-shadow: none;
+      border-top: 1px solid #E9E9E9;
+      border-radius: 0;
+
+      @include screen(l) {
+        min-width: 470px;
+        max-width: 470px;
+        margin-right: 35px;
+        overflow: visible;
+      }
+
+      li {
+        &:last-of-type {
+          height: 0;
+          opacity: 0;
+          pointer-events: none;
+        }
+      }
+
+      .uk-accordion-title {
+        position: relative;
+        padding: 7px 20px 6px 25px;
+        border-bottom: 1px solid #E9E9E9;
+        font: 600 14px/28px FuturaPT;
+        text-transform: uppercase;
+        color: #30373D;
+
+        &::before {
+          @include screen(l) {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 10px;
+            margin: auto;
+            width: 10px;
+            height: 16px;
+            background: url(../img/pic/ico/arrow-2.svg) no-repeat, transparent;
+            background-size: 10px 16px;
+            background-position: center;
+            border-radius: 0;
+            transition: transform .3s;
+            transform: none;
+          }
+        }
+      }
+
+      & li.uk-open>.uk-accordion-title::before {
+        transform: none;
+      }
+
+      .uk-accordion-content {
+        @include screen(l) {
+          display: none;
+        }
+      }
+    }
+
+    .uk-switcher {
+      @include screen(l) {
+        padding-right: 70px;
+      }
+
+      p {
+        font: normal 18px/29px Roboto;
+        color: #30373D;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+  }
+
+  &__accordion {
+    .accordion {
+      @include screen(l) {
+        margin-top: 40px;
+      }
+    }
+
+    .uk-accordion-content {
+      padding: 0;
+    }
+
+    .product__main-atributes {
+      ul {
+        background-color: #F8F8F8;
+
+        li {
+          padding: 16px 25px 18px;
+
+          &:not(:last-of-type) {
+            border-bottom: 1px solid #E9E9E9;
+          }
+        }
+
+        span {
+          font: normal 14px/16px Roboto;
+
+          &:first-of-type {
+            color: #959595;
+          }
+
+          &:last-of-type {
+            color: #30373D;
+          }
+        }
+      }
+    }
+
+    .product__all-atributes {
+      ul {
+        background-color: #F8F8F8;
+
+        li {
+          padding: 16px 25px 18px;
+
+          &:not(:last-of-type) {
+            border-bottom: 1px solid #E9E9E9;
+          }
+        }
+
+        span {
+          font: normal 14px/16px Roboto;
+
+          &:first-of-type {
+            color: #959595;
+          }
+
+          &:last-of-type {
+            color: #30373D;
+          }
+        }
+      }
+    }
+
+    .product__payment {
+      .delivery__container {
+        padding: 60px 40px;
+        text-align: center;
+        background-color: #ffffff;
+      }
+
+      .delivery__lower-text {
+        display: block;
+      }
+    }
+
+    .product__reviews {
+
+      &-btn {
+        margin-bottom: 40px;
+        padding: 13px 15px 12px;
+        width: 100%;
+        text-align: center;
+        white-space: nowrap;
+        font: 500 16px/22px FuturaPT;
+        color: #f8355e;
+        border-radius: 8px;
+        background-color: #fff;
+        transition: box-shadow .3s, color .1s, background-color .3s, border .3s;
+        border: 1px solid #f8355e;
+
+        &:hover {
+          background-color: #f8355e;
+          color: #fff;
+          border: 1px solid transparent;
+        }
+      }
+
+      .title {
+        margin-bottom: 40px;
+      }
+
+      .reviews__content {
+        background-color: #ffffff;
+      }
+
+      &-container {
+        position: relative;
+        overflow: hidden;
+
+        @include screen(l) {
+          max-height: 1200px;
+        }
+      }
+
+      .swiper-pagination {
+        @include screen(xl) {
+          bottom: 20px;
+        }
+
+        @include screen(l) {
+          display: none;
+        }
+
+        &-bullet {
+          opacity: 1;
+          background-color: #E0E0E0;
+
+          &-active {
+            background-color: #7A7A7A;
+          }
+        }
+      }
+
+      .swiper-slide {
+        @include screen(xl) {
+          width: 90%;
+          margin: auto;
+        }
+
+        @include screen(l) {
+          /* margin-right: 10px; */
+          height: 100% !important;
+        }
+
+        a {
+          position: relative;
+          display: block;
+
+          &:hover {
+            &::after {
+              transform: scale(1.3);
+            }
+          }
+
+          &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 50px;
+            height: 58px;
+            background: url('../img/pic/ico/play-ico.svg') no-repeat;
+            background-size: contain;
+            transition: transform .3s;
+          }
+
+          img {
+            width: 100%;
+            height: auto;
+            border: 1px solid #EAEAEA;
+            border-radius: 15px;
+            overflow: hidden;
+
+            @include screen(l) {
+              max-width: 295px;
+              max-height: 295px;
+            }
+          }
+        }
+
+        div {
+          span {
+            &:first-child {
+              padding-left: 10px;
+              font: 500 22px/26px FuturaPT;
+              color: #30373D;
+            }
+
+            &:last-child {
+              padding-right: 10px;
+              font: normal 16px/19px Roboto;
+              color: #FF548C;
+            }
+          }
+        }
+
+        span {
+          padding-left: 10px;
+          font: normal 14px/22px Roboto;
+          color: rgba(48, 55, 61, .5);
+        }
+      }
     }
   }
 }
