--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,6 +27,7 @@
 @import "components/tooltip";
 @import "components/rating";
 @import "components/fileuploader";
+@import "components/profile";
 
 @import "layout/header";
 @import "layout/main-features";
